fix(gkavatar): z-index not working on safari

--- a/gkavatar/2021/styles.css
+++ b/gkavatar/2021/styles.css
@@ -37,6 +37,10 @@ body {
   position: relative;
   z-index: -1;
 }
+.buggy-safari .style__fg {
+  z-index: 999;
+  -webkit-transform: translate3d(0, 0, 1px);
+}
 #styles-container img { width: 100%; height: 100%; }
 #result-image { max-width: 512px; width: 100%; }
 a:link { text-decoration: none; }
